@@ -1,5 +1,5 @@
-<& '/widgets/wrappers/table_top.mc', 
-    caption => 'Current Contributors' 
+<& '/widgets/wrappers/table_top.mc',
+    caption => 'Current Contributors'
 &>
     <script type="text/javascript">
     function deleteContrib(button) {
@@ -14,9 +14,9 @@
         contribs   => \@contribs
     &>
     </div>
-    
+
     <& '/widgets/profile/hidden.mc', id => "new_contrib_id", name => "new_contrib_id" &>
-    
+
 <& '/widgets/wrappers/table_bottom.mc' &>
 
 <& /widgets/search/search.mc,
